# GHOST

./: .clang-format  .drone.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  GHOST-config.cmake  GHOST-targets.cmake  INSTALL  Makefile  README  README.md  README.old  TODO  bitbucket-pipelines.yml  config.mk  ghost-config-version.cmake.in  ghost-config.cmake.in  ghost.pc.in  groups.dox  minimal_scamac_cleaned.c  mmtocrs.c  modulefile  thejob-dirac.csh  thejob-gpu-openmpi.csh  thejob-gpu.csh  thejob-tinyb.csh  thejob.csh  thejob.job  travis_deploy.enc  valgrind.supp
SRC/: Correctness_check.c  Hybrid_SpMVM.c  Hybrid_SpMVM_full.c  Hybrid_SpMVM_parRead.c  aux.c  cudafun.cu  hybrid_kernel_0.c  hybrid_kernel_I.c  hybrid_kernel_II.c  hybrid_kernel_III.c  hybrid_kernel_III_orig.c  hybrid_kernel_IV.c  hybrid_kernel_IX.c  hybrid_kernel_V.c  hybrid_kernel_VI.c  hybrid_kernel_VII.c  hybrid_kernel_VIII.c  hybrid_kernel_Va.c  hybrid_kernel_Vb.c  hybrid_kernel_X.c  hybrid_kernel_XI.c  hybrid_kernel_XII.c  hybrid_kernel_XIII.c  hybrid_kernel_XIV.c  hybrid_kernel_XV.c  hybrid_kernel_XVI.c  hybrid_kernel_XVII.c  imtql2.f  kernel.cl  main_lanczos.c  main_minimal.c  main_spmvm.c  matricks.c  matricks_GW.F  matricks_GW.f  mmtocrs.c  mpihelper.c  mpitest.c  my_ellpack.c  new_pio_read.c  (+10 more)
SRC/attic/: Hybrid_SpMVM_vor_cleanup.c  cudafun.cu
SRC/include/: cudafun.h  cudamacros.h  gpumacros.h  kernel_helper.h  matricks.h  mmio.h  mpihelper.h  my_ellpack.h  mymacros.h  oclfun.h  oclmacros.h  spmvm_globals.h  spmvm_util.h
apps/: .gitignore  Makefile  common.mk
apps/benchshell/: Makefile  benchshell.c
apps/dense/: Makefile  dense.c  foo.vec
apps/hybrid/: Makefile  gmon.out  hybrid.c
apps/lanczos/: Makefile  lanczos.c  lanczos.h  main_lanczos.c
apps/lanczos_cpu/: Makefile  lanczos.c  lanczos.h  lanczoskernels.cl  types_fortran.taghl
apps/lanczos_simple/: Makefile  imtql1f.f  lanczos.c  lanczos.h  lanczos.ps  pythagf.f
apps/minimal/: Makefile  main_minimal.c  minimal.c
apps/multicomm/: Makefile  multicomm.c
apps/nompi/: Makefile  nompi.c
apps/spmvm/: Makefile  main_spmvm.c
apps/taskq/: Makefile  main_task_model_old.c  taskq.c  taskq_mult.c  taskq_omptest.c
apps/test/: Makefile  omp.c  shiftscale.c  vec.c
bench/: bench.pl
branches/no-sys-calls/: Makefile
cmake/: FindGSL.cmake  FindHWLOC.cmake  FindLibSci.cmake  FindOpenCL.cmake  OptimizeForArchitecture.cmake  cmake_uninstall.cmake.in  configure_spmp.sh
doc/: README.md  ghost.doxyconf
doxygen/: Doxyfile.in  codegeneration.md  context.md  densemats.md  groups.dox  heterogeneity.md  instrumentation.dox  instrumentation.md  mainpage.md.in  tasking.md
examples/: Makefile
examples/lanczos/: lanczoskernels.cl  main_lanczos.c
examples/minimal/: main_minimal.c
examples/spmvm/: main_spmvm.c
ghost/: INSTALL  Makefile  README  RELEASENOTES  ROADMAP  config.mk  generateVariants.sh  ghost_mmio.c  include_GCC.mk  include_ICC.mk  include_NVCC.mk  include_XLC.mk  valgrind.supp
ghost/doc/: FAQ.md  README.md  ghost.dox  ghost.doxyconf
ghost/fortran/: Makefile  README  ghost_fun.F90  ghost_types.F90  minimal.F90
ghost/include/: bjds.h  crs.h  ghost.h  ghost_bench.h  ghost_blas_mangle.h  ghost_complex.h  ghost_constants.h  ghost_cpuid.h  ghost_mat.h  ghost_taskq.h  ghost_types.h  ghost_util.h  ghost_vec.h  ghost_workq.h  kernel.h  kernel_helper.h  mpihelper.h  sell.h  thpool.h
ghost/src/: bjds.c  bjds_kernel_intr.c  bjds_kernel_tmpl.cpp  crs.c  crs_kernel_tmpl.cpp  ghost.c  ghost_cpuid.c  ghost_mat.c  ghost_solver_nompi.c  ghost_taskq.c  ghost_util.c  ghost_vec.c  ghost_vec_tmpl.cpp  ghost_workq.c  hybrid_kernel_0.c  matricks.c  sell.c  sell_kernel_intr.c  sell_kernel_tmpl.cpp  thpool.c
include/: crs.h  fghost.h  ghost.h  ghost_affinity.h  ghost_blas_mangle.h  ghost_cl_util.h  ghost_complex.h  ghost_config.h.in  ghost_constants.h  ghost_context.h  ghost_crs.h  ghost_cu_complex_helper.h  ghost_cu_crs.h  ghost_cu_util.h  ghost_cu_vec.h  ghost_mat.h  ghost_math.h  ghost_mpi_util.h  ghost_sell.h  ghost_taskq.h  ghost_types.h  ghost_util.h  ghost_vec.h  sell.h
include/cl/: ghost_cl_util.h
include/fortran/: fghost.h
include/ghost/: affinity.h  autogen.h  avx2Macros.h  avxMacros.h  bench.h  bincrs.h  bindensemat.h  bitmap.h  blas_mangle.h  blas_util.h  carp.h  carp_rb.h  colpack.h  compatibility_check.h  complex.h  config.h.in  constants.h  context.h  core.h  cpp11_fixes.h  cpumap.h  crs.h  crs_kacz.h  cu_bench.h  cu_complex.h  cu_crs.h  cu_densemat.h  cu_densemat_cm.h  (+81 more)
jenkins/: JenkinsfileDLR_Matrix  JenkinsfileDLR_TPLs  Jenkinsfile_MatrixExample
lanczos/: Makefile  imtql1.f  imtql2.f  imtql2f.f  lanczos.h  main_lanczos.c
libspmvm/: .gitignore  Makefile  README  config.mk  include_GCC.mk  include_ICC.mk
makes/: make.inc.EM64T  make.inc.x86_64  make_default.mk  make_dirac.mk  make_dunnington.mk  make_gpu.mk  make_lima.mk  make_tinygpu.mk  make_vampir.mk  make_woody.mk
minimal/: main_minimal.c
spmvm/: main_spmvm.c
src/: affinity.c  autogen.cpp  aux.c  averaging.c  averaging.cpp  bench.c  bincrs.c  bincrs.cpp  bincrs_func.c  bitmap.c  blas_util.c  carp.c  carp_rb.c  cl_util.c  colpack.cpp  compatibility_check.c  context.c  context.cpp  core.c  cpumap.c  crs.c  crs.cpp  crs.cu  crs_kacz.cpp  crs_kernel.cl  crs_kernel_tmpl.cpp  crs_spmv.cpp  cu_bench.cu  cu_temp_buffer_malloc.cpp  cu_util.c  cu_util.cu  datatransfers.cpp  densemat.c  densemat.cpp  densemat.cu  densemat_cm.c  densemat_cm.cpp  densemat_cm.cu  densemat_cm_averagehalo.cpp  densemat_rm.c  (+224 more)
test/: CMakeLists.txt  Makefile  Performance__rrze3_vv_NZE_4x1x12.out  Performance_l1448_rrze3_vv_NZE_4x1x12.out  Performance_tg008_rrze3_NZE_2x1x2_512x512.out  ci-sc-dlr-old.sh  ci-sc-dlr-optional-libs.sh  ci-sc-dlr.sh  context.c  diagfirst.c  ghost_test.h  minimal.c  simple.c  simple.cpp  test.c  test.pl  test1_d.crs
tools/: Makefile  binCRS2mm.py  config.mk  crsfiles2crss.pl  crsfiles2mm.pl  mm2alpha.py  mm2alpha_tex.py  mm2binCRS.py  mm2crsfiles.pl  parseEnergyLikwidCSV.pl
utils/: Makefile  mmtocrs.c  parseCSV.pl
(+279 files in other folders)
